force-app/main/default/objects/Rooms_and_Services__c/fields/EntireServices__c.field-meta.xml
<CustomField>
    <fullName>EntireServices__c</fullName>
    <formula>IF ( INCLUDES ( Services__c , &quot;Breakfast&quot; ), &quot;Breakfast; &quot;,null ) &amp;
IF ( INCLUDES ( Services__c  , &quot;Dinner&quot; ), &quot;Dinner; &quot;,null ) &amp;
IF ( INCLUDES ( Services__c  , &quot;Gym&quot; ), &quot;Gym; &quot;,null ) &amp;
IF ( INCLUDES ( Services__c  , &quot;Camp Fire&quot; ), &quot;Camp Fire; &quot;,null ) &amp;
IF ( INCLUDES ( Services__c  , &quot;Lunch&quot; ), &quot;Lunch; &quot;,null )

&amp;&quot; , No of Beds: &quot;&amp;

   No_of_Beds__c 

&amp;&quot; , Room No: &quot;&amp;

    Room_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EntireServices</label>
    <type>Text</type>
</CustomField>