force-app/main/default/objects/Rooms_and_Services__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <label>Room Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>