force-app/main/default/objects/Rooms_and_Services__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Room_Number__c</columns>
    <columns>Services__c</columns>
    <columns>Hotel_Detail__c</columns>
    <columns>Room_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>